v4.0.0b2
========
 * (on behalf of Artur Nebot) Set EdgeOptions to start Chromium-based Edge
   by default. Fixes issue #9262.
 * Added support for CDP in Firefox. This currently only works for Firefox
   Nightly. To use this feature, set the EnableDevToolsProtocol property of
   FirefoxOptions to true.
 * Fixed network interception for use with browsers that support CDP.

v4.0.0b1
========
 * Added ability to listen for JavaScript exceptions and callbacks for
   browsers implementing the Chromium DevTools Protocol.
 * Added the ability of a user to intercept and manipulate network traffic
   between the browser and the web site being automated. To use this feature
   at present, the browser being automated must support the Chromium DevTools
   Protocol, and the driver instance must implement the IDevTools interface.
   Attempting to use these features will cause an exception to be thrown at
   runtime if the driver is not capable of this communication. To access this
   feature, use the following code:

        // Assume "driver" is a valid IWebDriver instance
        INetwork network = driver.Manage().Network;

        // Set up monitoring information by adding handlers
        // and subscribing to events.

        // Begin monitoring by starting the monitor.
        await network.StartMonitoring();

   With this new functionality, users can do the following:
    * Monitor HTTP requests and responses between browser and web server
    * Add handlers to modify requests that meet user-defined criteria
    * Add handlers to supply responses for requests that meet user-defined
      criteria
    * Add handlers to supply authentication credentials for sites using
      basic and digest authentication
 * Added ISupportsPrint interface to .NET to allow use of Print method.
 * Exposed command executor on .NET RemoteWebDriver via IHasCommandExecutor
   interface.
 * Added support for full-page screenshot command to .NET Firefox driver.